frontEnd/stylesheet.css
/*
.displayResults{
	position: absolute;
	width: 10%;
}

.SIDList {
	position: absolute;
	padding-left: 200px;
}


.memberList {
	position: absolute;
	padding-left: 500px;
}*/

.icon {
	max-width:  50px;
	max-height: 50px;
}

.checkboxMainBlock {
	background-color: #AAAAAA;
	position: relative;
	display: block;
	width: 700px;
	height: 500px;
}

.lowerBlock {
	position: absolute;
	margin-left: 750px;
	width: 300px;
}

/* do not delete!
 * - activates on mouseover*/
.highlight {
	color: orange;
	font-weight: bold;
}

/* do not delete! 
 * activates on mouseoff*/
.unhighlight {
	color: blue;
	font-weight: bold;
}

h1, h2, h3, h4 {
	display: block;
	font: sans-serif;
	font-weight: bold;
	margin: 0px;
	padding: 0px;
}

.testerCode {
	size: 10px;
}

.checkboxCategories {
	display: inline-block;
	position: absolute;
	width: 32%;
	padding: 1%;
}

.Commitment {
}

.RolePlay {
	margin-top: 33%;
}

.Archetype {
	margin-top: 33%;
	margin-left: 33%;
}

.Activities {
	margin-left: 67%;
}

.Recruiting {
	margin-left: 33%;
}


.loadButton {
}

/* used to buffer the data list to make room for the Load More button*/
.footer {
}

